Feat: Se agrego separacion en footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -136,6 +136,10 @@
     </div>
   </section>
 
+  <div class="flex justify-center my-16">
+    <div class="w-32 h-1 rounded-full bg-gradient-to-r from-blue-400 via-blue-300 to-blue-400 animate-pulse"></div>
+  </div>
+
 
 
   <footer class=" footer text-text-primary dark:text-gray-300 py-8 transition-colors duration-300">
@@ -184,5 +188,3 @@
 
 
 </div>
-
-<script src="https://kit.fontawesome.com/tu_codigo_aca.js" crossorigin="anonymous"></script>
