Fix: Se corrigio posicion de whatsapp icon en small screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,10 +33,9 @@
       <span class="text-main font-semibold">¡Estoy para ayudarte!</span>
     </p>
 
-    <a class="fixed bottom-6 right-6 z-50"
+    <a class="fixed bottom-6 right-6 z-50 linkWhatsapp"
       href="https://api.whatsapp.com/send/?phone=2494242251&text&type=phone_number&app_absent=0" target="_blank">
       <button class="button" matTooltip="Chatear por WhatsApp">
-        Whatsapp
         <img class="icon" src="assets/logo/whatsapp.svg" alt="">
       </button>
     </a>
@@ -167,16 +166,12 @@
       </div>
 
       <!-- Redes sociales -->
-      <div class="mt-8 flex justify-center space-x-6">
+      <!-- <div class="mt-8 flex justify-center space-x-6">
         <a href="https://www.facebook.com/share/16YTFokNhx/" target="_blank"
           class="hover:text-main dark:hover:text-hover transform hover:scale-110 transition duration-300">
           <i class="fab fa-facebook text-2xl"></i>
         </a>
-        <a matTooltip="Proximamente..." href="#"
-          class="hover:text-main dark:hover:text-hover transform hover:scale-110 transition duration-300">
-          <i class="fab fa-instagram text-2xl"></i>
-        </a>
-      </div>
+      </div> -->
 
       <!-- Derechos de autor -->
       <div class="mt-6 text-center text-sm">
