Feat: Se agrego link al gmail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -160,8 +160,7 @@
         <div>
           <h3 class="text-lg font-semibold text-main dark:text-white">Contacto</h3>
           <p class="mt-2 text-sm">📞 Teléfono: <span class="text-main font-semibold">+542494242251</span></p>
-          <p class="mt-2 text-sm">✉️ Email: <span
-              class="text-main font-semibold">{{'ivanfcaballero22@gmail.com'}}</span></p>
+          <p class="mt-2 text-sm">✉️ Email: <span class="text-main font-semibold"><a href="mailto:ivanfcaballero22@gmail.com">{{'ivanfcaballero22@gmail.com'}}</a></span></p>
         </div>
       </div>
 
