--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,22 +3,23 @@
   <header class="relative text-white text-center">
     <!-- 🎥 Video de fondo -->
     <video autoplay muted loop playsinline webkit-playsinline preload="auto"
-      class="videoBg inset-0 w-full object-cover z-0 h-[100px]">
+      class="videoBg inset-0 w-full object-cover z-0 h-[200px]">
       <source src="assets/videos/hero-bg2.mp4" type="video/mp4" />
       Tu navegador no soporta video HTML5.
     </video>
 
 
     <!-- 🌟 Contenido encima del video -->
-    <div class="title absolute inset-0 flex flex-col items-center justify-center h-[100px] z-10">
+    <div class="absolute inset-0 flex flex-col items-center justify-center h-[200px] z-10">
       <div class="flex items-center gap-3">
-        <img src="assets/logo/logo.png" alt="Logo Iván" class="h-10 w-auto drop-shadow-sm rounded-lg" />
+        <img height="27px" width="27px" src="assets/logo/logo.avif" alt="Logo Iván"
+          class="logoIvan drop-shadow-sm rounded-lg md:h-[40px] md:w-auto lg:h-[50px] sm:h-[27px] sm:w-auto" />
         <h1
-          class="text-2xl md:text-3xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 via-blue-300 to-white drop-shadow-md">
+          class="m-0 title text-2xl sm:text-[27px] md:text-4xl lg:text-6xl font-bold text-transparent bg-clip-text bg-gradient-to-r from-blue-400 via-blue-300 to-white drop-shadow-md">
           Reparaciones Iván
         </h1>
       </div>
-      <p class="mt-1 text-sm">Soluciones rápidas y confiables para tu PC</p>
+      <p class="mt-1 sm:text-[16px] md:text-xl lg:text-3xl">Soluciones rápidas y confiables para tu PC</p>
     </div>
   </header>
 
@@ -34,8 +35,8 @@
     </p>
 
     <a class="fixed bottom-6 right-6 z-50 linkWhatsapp"
-      href="https://api.whatsapp.com/send/?phone=2494242251&text&type=phone_number&app_absent=0" target="_blank">
-      <button class="button" matTooltip="Chatear por WhatsApp">
+      href="https://api.whatsapp.com/send/?phone=2494242251&text&type=phone_number&app_absent=0" target="_blank" aria-label="Chatear por WhatsApp">
+      <button class="button">
         <img class="icon" src="assets/logo/whatsapp.svg" alt="">
       </button>
     </a>
@@ -160,7 +161,8 @@
         <div>
           <h3 class="text-lg font-semibold text-main dark:text-white">Contacto</h3>
           <p class="mt-2 text-sm">📞 Teléfono: <span class="text-main font-semibold">+542494242251</span></p>
-          <p class="mt-2 text-sm">✉️ Email: <span class="text-main font-semibold"><a href="mailto:ivanfcaballero22@gmail.com">{{'ivanfcaballero22@gmail.com'}}</a></span></p>
+          <p class="mt-2 text-sm">✉️ Email: <span class="text-main font-semibold"><a
+                href="mailto:ivanfcaballero22@gmail.com">{{'ivanfcaballero22@gmail.com'}}</a></span></p>
         </div>
       </div>
 
