Fabook Logo added, Fix: Autoplay fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,10 +34,16 @@
       <span class="text-main font-semibold">¡Estoy para ayudarte!</span>
     </p>
 
+    <a class="fixed bottom-20 right-6 z-50 linkWhatsapp linkFacebook"
+      href="https://www.facebook.com/Repairivan?rdid=tMuKfSzelnV1Qah8&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F16YTFokNhx%2F#" target="_blank" aria-label="Chatear por WhatsApp">
+      <button class="button">
+        <img class="icon" src="assets/logo/facebook.svg" alt="Facebook logo">
+      </button>
+    </a>
     <a class="fixed bottom-6 right-6 z-50 linkWhatsapp"
       href="https://api.whatsapp.com/send/?phone=2494242251&text&type=phone_number&app_absent=0" target="_blank" aria-label="Chatear por WhatsApp">
       <button class="button">
-        <img class="icon" src="assets/logo/whatsapp.svg" alt="">
+        <img class="icon" src="assets/logo/whatsapp.svg" alt="WhatsApp logo">
       </button>
     </a>
 
