--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -77,9 +77,21 @@
   }
 }
 
+.linkFacebook {
+  @include mobile {
+    bottom: 70px;
+    right: 10px;
+  }
+}
+
 @media (max-width: 321px) {
   .linkWhatsapp{
-    bottom: 150px;
+    bottom: 110px;
+    right: 5px;
+  }
+
+  .linkFacebook {
+    bottom: 50px;
     right: 5px;
   }
 }
